Font changed to Francois One

--- a/style.css
+++ b/style.css
@@ -49,17 +49,6 @@ table {
 /* End of Reset 
 ====================== */
 
-/*@import url(http://fonts.googleapis.com/css?family=Raleway:700,300,100);*/
-@font-face {
-    font-family: 'bebas';
-    src: url('fonts/BEBAS___-webfont.eot');
-    src: url('fonts/BEBAS___-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/BEBAS___-webfont.woff') format('woff'),
-         url('fonts/BEBAS___-webfont.ttf') format('truetype'),
-         url('fonts/BEBAS___-webfont.svg#bebas') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 html,
 body {
 	height: 100%;
@@ -67,58 +56,82 @@ body {
 #mainpage,
 #aboutpage,
 #contactpage {
-	position: relative;	
 	height: 100%;
+	min-height: 100%;
 	overflow: auto;
+	position: relative;
+	width: 100%;
 }
 body {
-	font-family: sans-serif;
+	font-family: 'Francois One', sans-serif;
 	color: black;
 	background: #eee;
 }
 #mainpage {
-	background: url('img/brooklynbridge.jpg') no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	background-image: url('img/brooklynbridge.jpg');
 	background-size: cover;
-	min-height: 440px;
+	background-position: center center;
+	background-repeat: no-repeat;
 }
 
 /* Header
 ============================ */
-#mainpage header {
-	background: rgba(0,0,0,.2);
-	height: 100%;
-	width: 100%;
-	position: absolute;
-}
-#mainpage header a {
+#mainpage #main-title a {
 	color: white;
 }
-header h1 {
+#main-title {
+	left: 0;
+	position: absolute;
+	top: 0;
+	height: 100%;
+	overflow: visible;
+	width: 100%;
+	min-width: auto;
+}
+#main-title .nameplate {
+	left: 15px;
+	position: absolute;
+	top: 570px;
+	font-size: 2.5em;
+	text-transform: uppercase;
+	letter-spacing: .05em;
 	-webkit-transform: rotate(-90deg);
 	-moz-transform: rotate(-90deg);
 	-ms-transform: rotate(-90deg);
-	-o-transform: rotate(-90deg);
 	transform: rotate(-90deg);
-	position: absolute;
-	top: 360px;
-	left: -183px;
+	-webkit-transform-origin: 0 0;
+  	-moz-transform-origin: 0 0;
+  	-ms-transform-origin: 0 0;
+  	-o-transform-origin: 0 0;
+    transform-origin: 0 0;
+	-webkit-transition: left .6s cubic-bezier(0.165,.84,.44,1),color .3s linear;
+	transition: left .6s cubic-bezier(0.165,.84,.44,1),color .3s linear;
+	z-index: 40;
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+#mainpage #main-title {
+	background: rgba(0,0,0,.2);
+}
+#main-title nav {
+	z-index: 800;
 }
 
 /* Navigation Button
 ======================= */
 #toggle {
-	z-index: 500;
 	position: absolute;
-	top: 32px;
-	left: 15px;
+	height: 65px;
+	width: 65px;
 }
 .hamburger {
 	width: 40px;
 	height: 6px;
 	background: #000;
+	position: absolute;
+	top: 32px;
+	left: 15px;
 }
 .hamburger:after,
 .hamburger:before {
@@ -152,7 +165,6 @@ header h1 {
 	background: #fff;
 	margin-top: 10px;
 	position: absolute;
-	z-index: 100;
 }
 .open .hamburger:after {
 	-webkit-transform: rotate(-45deg);
@@ -170,19 +182,12 @@ header h1 {
 }
 header nav {
 	height: 65px;
-	width: 60px;
+	width: 65px;
 	position: absolute;
 }
-
 header a {
 	color: #000;
 	text-decoration: none;
-}
-header h1 {
-	font-size: 2.5em;
-	font-family: 'bebas', Helvetica, Arial, sans-serif;
-	letter-spacing: .05em;
-	z-index: 500;
 }
 
 /* Image Grid Styles
@@ -251,7 +256,7 @@ header h1 {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 5;
+	z-index: 700;
 	background: rgba(0,0,0,.8);
 	text-align: center;
 	overflow: auto;
@@ -265,8 +270,7 @@ header h1 {
 }
 #nav_menu li a {
 	color: #fff;
-	font-size: 1.25em; 
-	font-family: 'bebas', Helvetica, Arial, sans-serif;
+	font-size: 1.25em;
 	text-decoration: none;
 }
 #nav_menu #portfolio {
@@ -282,11 +286,10 @@ header h1 {
 /* About Page
 =========================================== */
 #aboutpage {
-	background: url('img/pinkflowers.JPG') no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	background-image: url('img/pinkflowers.jpg');
 	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
 }
 #textbox {
 	width: 75%;
@@ -299,7 +302,6 @@ header h1 {
 	overflow: auto;
 }
 #textbox h1 {
-	font-family: 'bebas', Helvetica, Arial, sans-serif;
 	font-size: 3em;
 	padding-top: 18px;
 }
@@ -312,7 +314,6 @@ header h1 {
 	margin-left: 18px;
 }
 #textbox h2 {
-	font-family: 'bebas', Helvetica, Arial, sans-serif;
 	font-size: 1.5em;
 	margin-bottom: .25em;
 }
@@ -324,7 +325,6 @@ header h1 {
 	margin-bottom: 2em;
 	margin-top: .5em;
 	font-size: 1.2em;
-	
 }
 #textbox p {
 	font-family: Garamond, Georgia, serif;
@@ -338,17 +338,15 @@ header h1 {
 /* Contact Page
 =========================================== */
 #contactpage {
-	background: url('img/sugarbowl.JPG') no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	background-image: url('img/sugarbowl.jpg');
 	background-size: cover;
-	min-height: auto;
+	background-position: center center;
+	background-repeat: no-repeat;
 }
 
 /* Media Queries
 =========================================== */
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 950px) { 
 	#container {
 		-webkit-column-count: 2;
 		-webkit-column-gap:   0px;
@@ -364,10 +362,11 @@ header h1 {
 	}
 }
 @media screen and (max-width: 550px) {
-	header h1 {
-		top: 235px;
-		left: -146px;
+	#main-title .nameplate {
+		left: 9px;
+		top: 470px;
 		font-size: 2em;
+		min-width: 400px;
 	}
 	.hamburger,
 	.hamburger:before,
@@ -379,6 +378,9 @@ header h1 {
 		margin-top: -9px;
 	}
 	.hamburger:after {
+		margin-top: 9px;
+	}
+	.open .hamburger:before {
 		margin-top: 9px;
 	}
 	#textbox {
@@ -408,7 +410,13 @@ header h1 {
 		column-gap:           0px;
 	}
 }
-
+@media screen and (max-height: 400px) {
+	#main-title .nameplate {
+		left: 12px;
+		top: 310px;
+		font-size: 1.4em;
+	}
+}
 
 
 
